--- a/src/app/lessons/styles.module.css
+++ b/src/app/lessons/styles.module.css
@@ -11,10 +11,6 @@
     min-height: calc(100% - 3.6rem);
 }
 
-.ToBottom div {
-    height: 100%;
-}
-
 .SearchContainer {
     display: flex;
     justify-content: space-between;
@@ -37,6 +33,8 @@
     top: 0px;
     padding: calc(var(--bs-gutter-x) * 0.5);
     height: min-content;
+    max-height: calc(100vh - var(--header-height));
+    overflow-y: scroll;
 }
 
 .LessonsList button {
@@ -57,6 +55,12 @@
     text-decoration: none;
     display: block;
     width: 100%;
+}
+
+.LessonsList a + a {
+    margin-top: 0.25rem;
+    padding-top: 0.25rem;
+    border-top: 2px solid #DEE2E6;
 }
 
 .LessonsList a:hover {
@@ -94,6 +98,7 @@
         transform: translateX(-100%);
         width: min(100%, 12rem);
         height: 100vh;
+        max-height: 100vh;
         background-color: white;
         text-align: left;
         transition: transform 0.5s;
